<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:fontFamily="sans-serif-medium"
            android:justificationMode="inter_word"
            android:text="@string/man1"
            android:textColor="@color/purple_200"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:fontFamily="sans-serif-medium"
            android:justificationMode="inter_word"
            android:text="@string/man1_2"
            android:textColor="#A3111112"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:justificationMode="inter_word"
            android:text="@string/man1_3"
            android:textColor="#A3111112"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:justificationMode="inter_word"
            android:text="@string/man1_4"
            android:textColor="#A3111112"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:justificationMode="inter_word"
            android:text="@string/man1_5"
            android:textColor="#A3111112"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:justificationMode="inter_word"
            android:text="@string/man1_6"
            android:textColor="#A3111112"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:justificationMode="inter_word"
            android:text="@string/man1_7"
            android:textColor="#A3111112"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="201dp"
            android:scaleType="fitXY"
            android:src="@drawable/mag1_1"
            android:padding="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/man1_2"
            android:padding="10dp"/>

    </LinearLayout>
</ScrollView>