<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mangoActivity"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/man1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="7dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:background="@color/white">

            <ImageButton
                android:id="@+id/mag1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:src="@drawable/mag1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/txtbgcolor"
                android:text="@string/man1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:background="@color/white">

                    <ImageButton
                        android:id="@+id/mag2"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/white"
                        android:scaleType="fitXY"
                        android:src="@drawable/mag2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/txtbgcolor"
                        android:text="@string/man2"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:background="@color/white">

                    <ImageButton
                        android:id="@+id/mag3"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/white"
                        android:scaleType="fitXY"
                        android:src="@drawable/mag3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/txtbgcolor"
                        android:text="@string/man3"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:background="@color/white">

                    <ImageButton
                        android:id="@+id/mag4"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/white"
                        android:scaleType="fitXY"
                        android:src="@drawable/mag4" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/txtbgcolor"
                        android:text="@string/man4"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>




        </LinearLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>